--- a/Teil2_Vorlage.ipynb
+++ b/Teil2_Vorlage.ipynb
@@ -86,6 +86,10 @@
   {
    "source": [
     "# 1. Threshold Metrics \n",
+    "\n",
+    "Treshold Metrics sind solche, die die Klassifikationsvorhersagefehler quantifizieren.\n",
+    "\n",
+    "\n",
     "- Precision\n",
     "- Recall\n",
     "- F1 Score"
@@ -176,7 +180,9 @@
   },
   {
    "source": [
-    "# 2. Ranking Metrics"
+    "# 2. Ranking Metrics\n",
+    "\n",
+    "Ranking Metrics befassen sich mehr mit der Bewertung von Klassifikatoren basierend darauf, wie effektiv sie beim Trennen von Klassen sind."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -207,12 +213,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stelle hier die ROC Curve dar\n"
+    "# Stelle hier die ROC Curve dar"
    ]
   },
   {
    "source": [
-    "# 3. Probabilistic Metrics"
+    "# 3. Probabilistic Metrics\n",
+    "\n",
+    "Probabilistic Metrics sind speziell darauf ausgelegt, die Unsicherheit in den Vorhersagen eines Klassifikators zu quantifizieren."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -232,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hier Brier Score für Modell2 berechnen"
+    "# Hier Brier Score für Modell1 berechnen"
    ]
   },
   {
@@ -240,7 +248,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Hier Brier Score für Modell2 berechnen"
+   ]
   }
  ]
 }
