--- a/ub_regression_vorlage.ipynb
+++ b/ub_regression_vorlage.ipynb
@@ -94,14 +94,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "___, ____, ____, ____ = ____(____, ____, ____, ____)"
+    "____, ____, ____, ____ = ____(____, ____, ____, ____)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trainieren des Modells und Treffen der Vorhersahen"
+    "Trainieren des Modells und Treffen der Vorhersagen"
    ]
   },
   {
@@ -123,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE Score: 0.3197972393578643\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mae = ____(____, ____)\n",
     "print(\"MAE Score: {}\".format(mae))"
@@ -148,17 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE Score: 0.40549334604249\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rmse = np.sqrt(____(____, ____))\n",
     "print(\"RMSE Score: {}\".format(rmse))"
@@ -173,17 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R^2 Score: 0.8799194079514094\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r2 = ____(____, ____)\n",
     "print(\"R^2 Score: {}\".format(r2))"
